2007-08-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* interp.tcl (::interp::createEmpty): Modified the sequence
	  clearing an interpreter of commands to properly handle the ::tcl
	  system namespace of Tcl 8.5.

2007-08-01  Andreas Kupries  <andreask@activestate.com>

	* deleg_method.test: Updated tests for changes in snit internal,
	  now using the new method introspection methods. Requires snit
	  1.3.1

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tcllib_interp.man: Fixed all warnings due to use of now
	* deleg_method.man: deprecated commands. Added a section about how
	* deleg_proc.man: to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-01  Andreas Kupries <andreask@activestate.com>

	* deleg_proc.man:    Added manpages for the packages creating
	* deleg_merthod.man: delegation procedures and methods.

	* deleg_proc.tcl:    Fixed bug, forgot that not only a comm
	* deleg_method.tcl:  channel is needed, but also the id of
	* deleg_proc.test:   the remote location. Added argument,
	* deleg_method.test: shuffled arguments, updated testsuites.
	* pkgIndex.tcl:      ** INCOMPATIBILITY ** Version bumped to 0.2

2006-08-30  Andreas Kupries <andreask@activestate.com>

	* interp.man:        Renamed the manpage, avoid clash with
	* tcllib_interp.man: core documentation.

2006-08-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* deleg_proc.tcl: Creation of delegation procedures.
	* deleg_proc.test: 

	* deleg_method.tcl: Creation of delegation methods.
	* deleg_method.test: 

2006-08-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* interp.tcl: New module. Interpreter creation and alias
	* interp.man: utility commands. Basic testsuite.
	* interp.test: