@@ -1,10 +1,10 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin interp n 0.1]
+[manpage_begin interp n 0.1.1]
 [copyright {2006 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Interpreter utilities}]
 [titledesc {Interp creation and aliasing}]
 [require Tcl 8.3]
-[require interp [opt 0.1]]
+[require interp [opt 0.1.1]]
 [description]
 [para]
 
