@@ -1,3 +1,9 @@
+2007-08-20  Andreas Kupries  <andreask@activestate.com>
+
+	* tcllib_interp.tcl: Bumped package version to 0.1.1.
+	* interp.man:
+	* pkgIndex.tcl:
+
 2007-08-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* interp.tcl (::interp::createEmpty): Modified the sequence
